local tests are running however need to fix the log type message